Add warning message for attendees to bring drinks
Added a warning message to remind attendees to bring their drinks.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           </div>
         </div>
 
+        <div class="card aviso-tomar">
+  <p class="mensaje-tomar">⚠ Traer lo que van a tomar 🍻</p>
+</div>
+
         <!-- MÚSICA -->
         <div class="card" id="music">
           <div class="k-title" style="margin-bottom:10px">Música de fondo</div>
@@ -112,3 +116,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
