Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -39,17 +39,20 @@
         </div>
 
         <div class="card" id="countdown">
-          <div class="k-title" style="margin-bottom:10px">Cuenta regresiva</div>
-          <div class="countdown" role="timer" aria-live="polite">
-            <div class="cd-box"><div class="cd-num" id="d">--</div><div class="cd-label">DÍAS</div></div>
-            <div class="cd-box"><div class="cd-num" id="h">--</div><div class="cd-label">HORAS</div></div>
-            <div class="cd-box"><div class="cd-num" id="m">--</div><div class="cd-label">MIN</div></div>
-            <div class="cd-box"><div class="cd-num" id="s">--</div><div class="cd-label">SEG</div></div>
-          </div>
-          <div class="card aviso-tomar">
+  <div class="k-title" style="margin-bottom:10px">Cuenta regresiva</div>
+  <div class="countdown" role="timer" aria-live="polite">
+    <div class="cd-box"><div class="cd-num" id="d">--</div><div class="cd-label">DÍAS</div></div>
+    <div class="cd-box"><div class="cd-num" id="h">--</div><div class="cd-label">HORAS</div></div>
+    <div class="cd-box"><div class="cd-num" id="m">--</div><div class="cd-label">MIN</div></div>
+    <div class="cd-box"><div class="cd-num" id="s">--</div><div class="cd-label">SEG</div></div>
+  </div>
+</div>
+
+<!-- ✅ El aviso va SEPARADO -->
+<div class="card aviso-tomar">
   <p class="mensaje-tomar">⚠ Traer lo que van a tomar 🍻</p>
-          </div>
-        </div>
+</div>
+
 
         <!-- MÚSICA -->
         <div class="card" id="music">
@@ -115,5 +118,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
